# pychess

./: LICENSE  README.md  pyproject.toml
src/pychess/: __init__.py  main.py
